--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.6'
 services:
     php:
         build: docker/php
+        container_name: php
         volumes:
             - './php-project/:/usr/share/nginx/html:consistent'
         env_file: ./docker/php/.env
@@ -38,6 +39,10 @@ services:
     vegeta:
         build: docker/vegeta
         container_name: vegeta
+        volumes: 
+            - ./docker/vegeta/report:/report
+        stdin_open: true
 
 volumes:
     db-data: {}
+    vegeta: {}
