--- a/docker/vegeta/Dockerfile
+++ b/docker/vegeta/Dockerfile
@@ -1,3 +1,8 @@
 FROM golang
 
-RUN go get -u github.com/tsenart/vegeta
+RUN apt-get update
+RUN apt-get install -y vim
+RUN go get github.com/tsenart/vegeta
+RUN go install github.com/tsenart/vegeta
+
+WORKDIR /report
